--- a/site/css/style.css
+++ b/site/css/style.css
@@ -14,12 +14,13 @@ h2 {
 	margin: 10px;
 	display: inline-block;
 	text-align: left;
+	background-color:gray;
 	
 }
 
-#div1 { background-color: #ee8b9f; }
-#div2 { background-color: #a0d0a3; }
-#div3 { background-color: #8db9e1; }
+#div1.sec-title { background-color: #ee8b9f; }
+#div2.sec-title { background-color: #a0d0a3; }
+#div3.sec-title { background-color: #8db9e1; }
 
 #div1 p, #div2 p, #div3 p {
 	padding: 50px 15px 15px 15px;
