--- a/site/css/style.css
+++ b/site/css/style.css
@@ -14,13 +14,8 @@ h2 {
 	margin: 10px;
 	display: inline-block;
 	text-align: left;
-	background-color:gray;
-	
+	background-color: #e5e5e5;
 }
-
-#div1.sec-title { background-color: #ee8b9f; }
-#div2.sec-title { background-color: #a0d0a3; }
-#div3.sec-title { background-color: #8db9e1; }
 
 #div1 p, #div2 p, #div3 p {
 	padding: 50px 15px 15px 15px;
@@ -37,7 +32,9 @@ h2 {
 	text-align: center;
 }
 
-
+#div1 > .sec-title { background-color: #ee8b9f; }
+#div2 > .sec-title { background-color: #a0d0a3; }
+#div3 > .sec-title { background-color: #8db9e1; }
 
 @media (min-width: 992px) {
 	#div1, #div2, #div3 { width:30%;}
